overlays/prod/portal-ingressroute-https.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: portal-ingressroute-https
  namespace: prod
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`portal.suitestudy.com`)
      kind: Rule
      services:
        - name: portal-service
          port: 80
  tls:
    secretName: portal-tls-cert
